--- a/main.config
+++ b/main.config
@@ -48,8 +48,8 @@ CONFIG_MTK_CONNINFRA_APSOC=y
 CONFIG_MTK_CONNINFRA_APSOC_MT7981=y
 CONFIG_MTK_CON_WPS_SUPPORT=y
 CONFIG_MTK_DBDC_MODE=y
-CONFIG_MTK_DOT11K_RRM_SUPPORT=y
-CONFIG_MTK_DOT11R_FT_SUPPORT=y
+#CONFIG_MTK_DOT11K_RRM_SUPPORT is not set
+#CONFIG_MTK_DOT11R_FT_SUPPORT is not set
 CONFIG_MTK_DOT11W_PMF_SUPPORT=y
 CONFIG_MTK_DOT11_HE_AX=y
 CONFIG_MTK_DOT11_N_SUPPORT=y
@@ -67,9 +67,9 @@ CONFIG_MTK_IGMP_SNOOP_SUPPORT=y
 CONFIG_MTK_INTERWORKING=y
 CONFIG_MTK_MAP_R2_VER_SUPPORT=y
 CONFIG_MTK_MAP_R3_VER_SUPPORT=y
-CONFIG_MTK_MAP_SUPPORT=y
+#CONFIG_MTK_MAP_SUPPORT is not set
 CONFIG_MTK_MBSS_DTIM_SUPPORT=y
-CONFIG_MTK_MBSS_SUPPORT=y
+#CONFIG_MTK_MBSS_SUPPORT is not set
 CONFIG_MTK_MCAST_RATE_SPECIFIC=y
 CONFIG_MTK_MEMORY_SHRINK=y
 CONFIG_MTK_MGMT_TXPWR_CTRL=y
@@ -100,8 +100,8 @@ CONFIG_MTK_TXBF_SUPPORT=y
 CONFIG_MTK_UAPSD=y
 CONFIG_MTK_VLAN_SUPPORT=y
 CONFIG_MTK_VOW_SUPPORT=y
-CONFIG_MTK_WARP_V2=y
-CONFIG_MTK_WDS_SUPPORT=y
+#CONFIG_MTK_WARP_V2 is not set
+#CONFIG_MTK_WDS_SUPPORT is not set
 CONFIG_MTK_WHNAT_SUPPORT=m
 CONFIG_MTK_WIFI_BASIC_FUNC=y
 CONFIG_MTK_WIFI_DRIVER=y
