--- a/padavanonly.config
+++ b/padavanonly.config
@@ -5938,7 +5938,7 @@ CONFIG_MTK_DOT11W_PMF_SUPPORT=y
 CONFIG_MTK_TXBF_SUPPORT=y
 CONFIG_MTK_FAST_NAT_SUPPORT=y
 CONFIG_MTK_WHNAT_SUPPORT=m
-CONFIG_MTK_WARP_V2=y
+#CONFIG_MTK_WARP_V2 is not set
 # CONFIG_MTK_WIFI_SKB_USES_SLAB is not set
 # CONFIG_MTK_FTM_SUPPORT is not set
 # CONFIG_MTK_IGMP_SNOOP_SUPPORT is not set
@@ -5955,7 +5955,7 @@ CONFIG_MTK_ATE_SUPPORT=y
 CONFIG_MTK_WLAN_SERVICE=y
 # CONFIG_MTK_PASSPOINT_R2 is not set
 # CONFIG_MTK_MBO_SUPPORT is not set
-CONFIG_MTK_MAP_SUPPORT=y
+#CONFIG_MTK_MAP_SUPPORT is not set
 CONFIG_MTK_MAP_R2_VER_SUPPORT=y
 CONFIG_MTK_MAP_R3_VER_SUPPORT=y
 # CONFIG_MTK_MAP_R2_6E_SUPPORT is not set
@@ -5980,8 +5980,8 @@ CONFIG_MTK_WIFI_MODE_AP=m
 # CONFIG_MTK_WIFI_MODE_STA is not set
 # CONFIG_MTK_WIFI_MODE_BOTH is not set
 CONFIG_MTK_MT_AP_SUPPORT=m
-CONFIG_MTK_WDS_SUPPORT=y
-CONFIG_MTK_MBSS_SUPPORT=y
+#CONFIG_MTK_WDS_SUPPORT is not set
+#CONFIG_MTK_MBSS_SUPPORT is not set
 CONFIG_MTK_APCLI_SUPPORT=y
 # CONFIG_MTK_APCLI_CERT_SUPPORT is not set
 # CONFIG_MTK_MAC_REPEATER_SUPPORT is not set
@@ -5990,8 +5990,8 @@ CONFIG_MTK_APCLI_SUPPORT=y
 # CONFIG_MTK_WIFI_SYSDVT is not set
 CONFIG_MTK_MUMIMO_SUPPORT=y
 CONFIG_MTK_MU_RA_SUPPORT=y
-CONFIG_MTK_DOT11R_FT_SUPPORT=y
-CONFIG_MTK_DOT11K_RRM_SUPPORT=y
+#CONFIG_MTK_DOT11R_FT_SUPPORT is not set
+#CONFIG_MTK_DOT11K_RRM_SUPPORT is not set
 # CONFIG_MTK_ENTERPRISE_AP_SUPPORT is not set
 CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT=y
 CONFIG_MTK_WIFI_EAP_FEATURE=y
